--- a/something.html
+++ b/something.html
@@ -11,6 +11,6 @@
     <h1>This is a bot page. Please do not disable javascript on this site. thx</h1>
     
     <p>Hi</p>
-    <script type='text/javascript' id='susi-bot-script' data-userid='0d4430701dfbf9e40083022448500a52' data-group='Social' data-language='en' data-skill='Dice-Throwing-Thing' src='https://skills.susi.ai/susi-chatbot.js'></script>
+    <script type="text/javascript" id="susi-bot-script" data-userid="9eeda8542026ca892c09bcce08c6dd94" data-group="Games, Trivia and Accessories" data-language="en" data-skill="Mobile Legends" src="https://skills.susi.ai/susi-chatbot.js" ></script>
 </body>
 </html>
