--- a/index.html
+++ b/index.html
@@ -9,6 +9,81 @@
 <body>
     
     <p>Hi</p>
+    <pre>
+::name Mobile Legends
+::category Games, Trivia and Accessories
+::language en
+::author <author_name>
+::author_url https://github.com/dhs17y1jLimYuWei
+::description This is a mobile legends bot for beginners to ask questions about mobile legends
+::dynamic_content <Yes/No>
+::developer_privacy_policy <link>
+::image images/images.jpg
+::terms_of_use <link>
+
+
+What is a good formation?
+Segway formation. A segway formation is where four players go to one lane to gank against the enemies while another one player goes to steal turrets on another lane. Very effective for turning a game around
+
+What heroes should i play to rank up?
+It depends on your team. An ideal team should have either two magic heroes and three physical heroes, or three magical heroes and two physical heroes. Out of all these heroes, you should have at least one tank, one mage and one marksmen. The other two can be either an assassin or a fighter. 
+
+What types of skills are there?
+There are 4 different types of skills. Namely, CC(Crowd Control), AoE(Area of Effect), Heal, Blink and Buff. 
+
+How do i avoid ganks?
+Keep watching the minimaps. If there is not many enemies on the minimap, that means they either are farming, or are hiding in bushes to gank. If you notice this, go to find a teammate so that you can avoid being caught in a dangerous gank. 
+
+What are kinds of items are there in the shop?
+Magical items in the shop are for mages, attack items in the shop are for marksmen and fighters, and defense items are for tanks. For assassins and supports, it will depend on whether they are magical or physical. 
+
+What are items for?
+Items help to give you an advantage against the opponents with their unique passives so that you can get more kills
+
+What are emblems for?
+Emblems gives you a small buff ande a specific talent which unlocks at level 20, 30 and 40. Talents are like a second passsive which gives you buffs if a certain condition is met. 
+
+Why do the damage texts appear in different color?
+Damage texts are classified into 3 different colors and types. Red, meaning physical damage, purple meaning magical damage and white meaning true damage. Physical damage can be countered with high armour items, magical damage can be countered with high magical resistance items however, true damage cannot be countered with any armour. 
+
+How to counter resistance?
+Physical resistance can be countered with items with physical penetration, such as malefic roar, while magial resistance can be countered with items with magic penetration such as divine glaive. 
+
+Does hero passive consume mana? 
+No heroes passives dont consume mana or energy
+
+How many hero roles are there?
+There are 6 hero roles
+
+What are tanks for?
+Tanks are for absorbing damage to protect damage dealers.
+
+What are mages for?
+Mages deal good burst damage to bring enemies to critical health or finish them off.
+
+What are marksmen for?
+Marksmen are heroes that can deal consistent high damage to melt enemies in a short period of time.
+
+What are fighters for?
+Fighters are for dealing decent damage to enemies while stil being able to aborb decent amounts of damage from the enemies. 
+
+What are supports for?
+Supports are for giving a certain hero an advantage during ganks, to either escape or preventing the enemy from escaping.
+
+What are assassins for?
+Assassins are for providing high burst damage to the enemy while stil being able to run away, unlike normal mages. 
+
+What is ganking?
+Ganking is where 2 or more of your team members attempt to kill lesser heroes on the enemy team.
+
+How to farm?
+Kill more monsters and minions, ensuring to last hit all of them. And spend your time wisely. 
+
+When to slay lord or turtle?
+Slay lord or turtle when the enemy team is either wiped out, or the enemy team is being distracted by your teammates. 
+
+    
+    </pre>
 <script type='text/javascript' id='susi-bot-script' data-userid='9eeda8542026ca892c09bcce08c6dd94' data-group='Games, Trivia and Accessories' data-language='en' data-skill='Mobile Legends' src='https://skills.susi.ai/susi-chatbot.js'></script>
 </body>
 </html>
