--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@ Slay lord or turtle when the enemy team is either wiped out, or the enemy team i
 
     
     </pre>
-<script type='text/javascript' id='susi-bot-script' data-userid='9eeda8542026ca892c09bcce08c6dd94' data-group='Games, Trivia and Accessories' data-language='en' data-skill='Mobile Legends' src='https://skills.susi.ai/susi-chatbot.js'></script>
+<script type='text/javascript' id='susi-bot-script' data-userid='9eeda8542026ca892c09bcce08c6dd94' data-group='Games, Trivia and Accessories' data-language='en' data-skill='Mobile_Legends' src='https://skills.susi.ai/susi-chatbot.js'></script>
 </body>
 </html>
