--- a/index.html
+++ b/index.html
@@ -10,6 +10,5 @@
     
     <p>Hi</p>
     
-<script type='text/javascript' id='susi-bot-script' data-userid='9eeda8542026ca892c09bcce08c6dd94' data-group='Games, Trivia and Accessories' data-language='en' data-skill='Mobile_Legends' src='https://skills.susi.ai/susi-chatbot.js'></script>
-</body>
+<script type='text/javascript' id='susi-bot-script' data-userid='9eeda8542026ca892c09bcce08c6dd94' data-group='Games, Trivia and Accessories' data-language='en' data-skill='Mobile Legends' src='https://skills.susi.ai/susi-chatbot.js'></script></body>
 </html>
